change type of body from String to byte array to support arbitrary content types